--- a/.env.sample
+++ b/.env.sample
@@ -1,8 +1,10 @@
-# User Id
-HOST_UID=
-# Group Id
-HOST_GID=
+# User ID
+HOST_UID=1000
+# Group ID
+HOST_GID=1000
+# User Name
+HOST_USER=
+# Group Name
+HOST_GROUP=
 # Time Zone
-TZ=
-# Container Password
-PASSWORD=
+TZ='Asia/Tokyo'
